--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18",
     "react-activity-calendar": "^2.3.5",
