landing page MVP built :)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.428.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-activity-calendar": "^2.3.5",
     "react-dom": "^18",
@@ -27,6 +28,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
