--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-activity-calendar": "^2.3.5",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "simple-icons": "^13.5.0",
     "tailwind-merge": "^2.5.2",
