--- a/package.json
+++ b/package.json
@@ -9,32 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@uiw/react-heat-map": "^2.2.2",
-    "@uiw/react-tooltip": "^4.22.3",
-    "axios": "^1.7.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.428.0",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.3",
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-activity-calendar": "^2.3.5",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.5",
-    "react-tooltip": "^5.28.0",
-    "simple-icons": "^13.5.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "next": "14.2.15"
   },
   "devDependencies": {
-    "daisyui": "^4.12.10",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
